--- a/.github/workflows/galaxy-import.yml
+++ b/.github/workflows/galaxy-import.yml
@@ -8,9 +8,12 @@ name: Release
     branches:
       - 'main'
 
+env:
+  ROLE_NAME: android_studio
+
 defaults:
   run:
-    working-directory: 'diademiemi.android_studio'
+    working-directory: 'diademiemi.${{ env.ROLE_NAME }}'
 
 jobs:
 
@@ -21,7 +24,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'diademiemi.android_studio'
+          path: 'diademiemi.${{ env.ROLE_NAME }}'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
@@ -33,5 +36,5 @@ jobs:
 
       - name: Trigger a new import on Galaxy.
         run: >-
-          ansible-galaxy role import --api-key ${{ secrets.GALAXY_API_KEY }}
+          ansible-galaxy role import --api-key ${{ secrets.GALAXY_API_KEY }} --role-name ${{ env.ROLE_NAME }}
           $(echo ${{ github.repository }} | cut -d/ -f1) $(echo ${{ github.repository }} | cut -d/ -f2)
