--- a/.github/workflows/galaxy-import.yml
+++ b/.github/workflows/galaxy-import.yml
@@ -13,7 +13,7 @@ env:
 
 defaults:
   run:
-    working-directory: 'diademiemi.${{ env.ROLE_NAME }}'
+    working-directory: 'diademiemi.$ROLE_NAME'
 
 jobs:
 
@@ -24,7 +24,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'diademiemi.${{ env.ROLE_NAME }}'
+          path: 'diademiemi.$ROLE_NAME'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
@@ -36,5 +36,5 @@ jobs:
 
       - name: Trigger a new import on Galaxy.
         run: >-
-          ansible-galaxy role import --api-key ${{ secrets.GALAXY_API_KEY }} --role-name ${{ env.ROLE_NAME }}
+          ansible-galaxy role import --api-key ${{ secrets.GALAXY_API_KEY }} --role-name $ROLE_NAME
           $(echo ${{ github.repository }} | cut -d/ -f1) $(echo ${{ github.repository }} | cut -d/ -f2)
