--- a/.github/workflows/galaxy-import.yml
+++ b/.github/workflows/galaxy-import.yml
@@ -2,29 +2,19 @@
 # This workflow requires a GALAXY_API_KEY secret present in the GitHub
 # repository or organization.
 
-name: Release
+name: Import to Galaxy
 'on':
   push:
     branches:
       - 'main'
 
-env:
-  ROLE_NAME: android_studio
-
-defaults:
-  run:
-    working-directory: "diademiemi.$env:ROLE_NAME"
-
 jobs:
-
-  release:
-    name: Release
+  galaxy-import:
+    name: Import to Galaxy
     runs-on: ubuntu-latest
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v2
-        with:
-          path: "diademiemi.$env:ROLE_NAME"
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
@@ -36,5 +26,6 @@ jobs:
 
       - name: Trigger a new import on Galaxy.
         run: >-
-          ansible-galaxy role import --api-key ${{ secrets.GALAXY_API_KEY }} --role-name $env:ROLE_NAME
+          ansible-galaxy role import --api-key ${{ secrets.GALAXY_API_KEY }}
+          --role-name $(echo ${{ github.repository }} | sed 's,.*/ansible_role_,,')
           $(echo ${{ github.repository }} | cut -d/ -f1) $(echo ${{ github.repository }} | cut -d/ -f2)
